--- a/styles/stylelogin.css
+++ b/styles/stylelogin.css
@@ -17,7 +17,7 @@ html{
 }
 body{
   min-height: 100vh;
-  background-image: url(/props/Bglogin1.png);
+  background-image: url(./props/Bglogin1.png);
   background-size: cover;
   background-position: right;
   overflow: hidden;
