--- a/styles/joinme.css
+++ b/styles/joinme.css
@@ -27,7 +27,7 @@ body {
       .navbar-brand {
           font-size: 24px;
           font-weight: 900;
-          color: var(--bs-navbar-brand-color);
+          color: rgb(255, 234, 0);
       }
 
       nav ul li a {
