--- a/styles/styleaboutme.css
+++ b/styles/styleaboutme.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
 
 
 .navbar-nav .nav-link {
-    color: #ffff00; /* Replace with your desired color */
+    color: #ffff00; 
 }
 
 
@@ -68,31 +68,31 @@ section {
     padding-bottom: 30px;
 }
 
-/* Styles for the About the creator section */
+
 #about-me {
-    background-color: #010101; /* Slightly darker background color */
-    padding: 50px 0; /* Padding around the section */
+    background-color: #010101; 
+    padding: 50px 0; 
 }
 
 #about-me h1 {
-    font-size: 2.5rem; /* Larger font size for the heading */
-    color: #000000; /* Dark color for the text */
+    font-size: 2.5rem; 
+    color: #000000; 
 }
 
 #about-me p {
-    font-size: 15px; /* Font size for the paragraph */
-    line-height: 1.6; /* Line height for better readability */
-    color: #000000; /* Gray color for the text */
+    font-size: 15px; 
+    line-height: 1.6; 
+    color: #000000; 
 }
 
 #about-me .btn {
-    margin-top: 20px; /* Space above the button */
-    background-color: #28a745; /* Different button background color */
+    margin-top: 20px; 
+    background-color: #28a745; 
     color: rgb(0, 0, 0); 
-    /* Button text color */
+    
 }
 
-/* Image styling */
+
 #about-me .img-fluid {
     padding-left: 15%;
     
@@ -101,10 +101,10 @@ section {
 
 #about-us {
     background-color: rgb(255, 0, 132);
-    margin-top: 20px; /* Adjust this value for top space */
+    margin-top: 20px; 
     
-    /* Optional padding can be added if needed */
-    padding-top: 0px; /* Optional: Inner top space */
+    
+    padding-top: 0px; 
     
     
 }
@@ -145,8 +145,8 @@ button {
 
 .areapic {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically if needed */
+    justify-content: center; 
+    align-items: center; 
 }
 
 .areapic img {
