--- a/styles/styleproject.css
+++ b/styles/styleproject.css
@@ -68,7 +68,7 @@ nav ul li a:hover {
 }
 
 .navbar-nav .nav-link {
-    color: #ffff00; /* Replace with your desired color */
+    color: #ffff00; 
 }
 
 
@@ -161,9 +161,9 @@ nav ul li a:hover {
     background-color:rgb(99, 99, 99);
 }
    
-/* Base button styles */
+
 
 .modal-title {
-    margin-top: -30px;  /* Adjust the top margin as needed */
+    margin-top: -30px;  
    padding-left: 60px;
 }
